--- a/FridgeIt2/app/src/main/AndroidManifest.xml
+++ b/FridgeIt2/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".scripts.DetailedRecipeActivity">
+            <!-- You can add additional attributes here if needed -->
+        </activity>
     </application>
 
 </manifest>
