--- a/FridgeIt2/app/build.gradle
+++ b/FridgeIt2/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
